Fix layout issue with champ icon after adding item row

--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,7 @@
 .champicon-wrapper {
   width:60px;
   float:left;
+  padding-top:10px;
 }
 
 .champicon-wrapper small {
